esio: added esio_file_clone method #1167
Implementation, documentation, and unit tests

git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@16349 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -41,7 +41,8 @@ AM_FCFLAGS += $(GRVY_FCFLAGS)
 #############################################################################
 
 ## Basic C API sanity checks
-TESTS          += basic
+TESTS          += basic.sh     # NB Wrapper script
+EXTRA_DIST     += basic.sh     # NB Wrapper script
 check_PROGRAMS += basic
 basic_SOURCES   = basic.c testutils.c
 basic_LDADD     = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
