esio: Makefile.am cleanups towards dist
Improved -j9-like behavior for sfmakedepend.am by now allowing directory-specific SFMAKEDEPEND_FLAGS.  Seems to both fix -j9 errors in esio/ and tests/.
Update EXTRA_DIST in doxygen/Makefile.am with DoxygenLayout.xml
Update EXTRA_DIST in tests/Makefile.am with empty.h5
Still seeing a 'make distcheck' error wrt file permissions in file_clone.

git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@16353 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -17,7 +17,8 @@ noinst_HEADERS  = fct.h                  \
 EXTRA_DIST      = layout_template.c      \
                   plane_template.c       \
                   line_template.c        \
-                  attribute_template.c
+                  attribute_template.c   \
+                  empty.h5
 
 TESTS              = # Append below
 TESTS_ENVIRONMENT  = ESIO_TEST_INPUT_DIR=$(srcdir)
@@ -265,6 +266,7 @@ clean-local:
 include $(top_srcdir)/license.am
 
 # Automatic dependency generation for Fortran
+SFMAKEDEPEND_FLAGS = -i esio -i esio_c_binding
 include $(top_srcdir)/sfmakedepend.am
 
 # Required for AX_AM_MACROS
