--- a/sfmakedepend.am
+++ b/sfmakedepend.am
@@ -10,11 +10,10 @@ BUILT_SOURCES += Makefile.dep
 CLEANFILES    += Makefile.dep
 
 SFMAKEDEPEND_INVOKE = $(PERL) $(top_srcdir)/build-aux/sfmakedepend.pl
-SFMAKEDEPEND_FLAGS  = -I $(srcdir)                                     \
-                      $(subst -I,-I ,$(filter -I%,$(AM_FCFLAGS)))      \
-                      -i mpi -i hdf5 -i h5lt -i grvy -i ifport         \
-                      -i esio -i esio_c_binding                        \
-                      -strip
+SFMAKEDEPEND_FLAGS  += -I $(srcdir)                                     \
+                       $(subst -I,-I ,$(filter -I%,$(AM_FCFLAGS)))      \
+                       -i mpi -i hdf5 -i h5lt -i grvy -i ifport         \
+                       -strip
 
 Makefile.dep: $(wildcard $(srcdir)/*.[Ff] $(srcdir)/*.[Ff]90)
 	$(SFMAKEDEPEND_INVOKE) $(SFMAKEDEPEND_FLAGS) $^ > $@
