esio: update ignores for r16355
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@16357 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/gnulib/.gitignore
+++ b/gnulib/.gitignore
@@ -1,11 +1,15 @@
+/alloca.h
 /arg-nonnull.h
 /c++defs.h
 /.deps
 /fcntl.h
 /Makefile
 /Makefile.in
+/stdio.h
+/stdlib.h
 /string.h
 /sys
 /time.h
 /unistd.h
 /warn-on-use.h
+/wchar.h
