esio: gnulib fnmatch,scandir,strverscmp for #1168
Preps restart-rename.{c,h} as well.

git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@16365 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/esio/Makefile.am
+++ b/esio/Makefile.am
@@ -33,6 +33,7 @@ libesio_la_SOURCES  += file-copy.c
 libesio_la_SOURCES  += h5utils.c
 libesio_la_SOURCES  += layout.c
 libesio_la_SOURCES  += metadata.c
+libesio_la_SOURCES  += restart-rename.c
 libesio_la_LDFLAGS  += $(LTLIBINTL) $(LIB_ACL)     # gnulib requirement
 libesio_la_LIBADD    = ../gnulib/libgnu.la
 
@@ -45,6 +46,7 @@ esio_include_HEADERS += visibility.h
 
 # Headers internal to the library
 noinst_HEADERS += file-copy.h
+noinst_HEADERS += restart-rename.h
 noinst_HEADERS += h5utils.h
 noinst_HEADERS += layout.h
 noinst_HEADERS += metadata.h
