esio: update ignores for r16365
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@16366 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/gnulib/.gitignore
+++ b/gnulib/.gitignore
@@ -1,10 +1,15 @@
 /alloca.h
 /arg-nonnull.h
 /c++defs.h
+/charset.alias
+/configmake.h
 /.deps
+/dirent.h
 /fcntl.h
 /Makefile
 /Makefile.in
+/ref-add.sed
+/ref-del.sed
 /stdio.h
 /stdlib.h
 /string.h
@@ -13,3 +18,4 @@
 /unistd.h
 /warn-on-use.h
 /wchar.h
+/wctype.h
