esio: add restart_nextindex for #1168 + tests
Hopefully this will be the majority of the string munging
for this particular feature.

git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@16371 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -38,6 +38,16 @@ AM_CFLAGS  += $(GRVY_CFLAGS)
 AM_FCFLAGS += $(GRVY_FCFLAGS)
 
 #############################################################################
+## INTERNAL INTERNAL INTERNAL INTERNAL INTERNAL INTERNAL INTERNAL INTERNAL ##
+#############################################################################
+
+## Internal restart renaming logic tests
+TESTS                   += restart_helpers
+check_PROGRAMS          += restart_helpers
+restart_helpers_SOURCES  = restart_helpers.c ../esio/restart-rename.c
+restart_helpers_LDADD    = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
+
+#############################################################################
 ## BASIC BASIC BASIC BASIC BASIC BASIC BASIC BASIC BASIC BASIC BASIC BASIC ##
 #############################################################################
 
