--- a/configure.ac
+++ b/configure.ac
@@ -49,6 +49,7 @@ AC_SUBST([MPICC_LOCATION])
 AX_MPIP()
 AX_LIB_HDF5([parallel])
 AX_VISIBILITY([hidden])
+AX_TLS()
 AC_LANG_POP([C])
 AC_CACHE_SAVE
 
