esio: pull in some warnings improvements from Suzerain
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@16400 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/configure.ac
+++ b/configure.ac
@@ -50,6 +50,8 @@ AX_MPIP()
 AX_LIB_HDF5([parallel])
 AX_VISIBILITY([hidden])
 AX_TLS()
+AX_COMPILER_VENDOR()
+AX_WARNINGS_SANITIZE()
 AC_LANG_POP([C])
 AC_CACHE_SAVE
 
