--- a/gnulib/.gitignore
+++ b/gnulib/.gitignore
@@ -6,6 +6,7 @@
 /.deps
 /dirent.h
 /fcntl.h
+/getopt.h
 /Makefile
 /Makefile.in
 /ref-add.sed
@@ -13,6 +14,7 @@
 /stdio.h
 /stdlib.h
 /string.h
+/strings.h
 /sys
 /time.h
 /unistd.h
