esio: #1248 make restart_rename into utility
Moved restart_rename to esio_rename.
Added argp-based options parsing.

git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@16426 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -48,13 +48,8 @@ restart_helpers_SOURCES  = restart_helpers.c ../esio/restart-rename.c
 restart_helpers_LDADD    = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
 
 ## Externally observable restart renaming tets
-TESTS                   += restart_rename.sh
-EXTRA_DIST              += restart_rename.sh
-check_PROGRAMS          += restart_rename
-restart_rename_SOURCES   = restart_rename.c ../esio/restart-rename.c
-restart_rename_LDADD     = ../esio/libesio.la
-restart_rename_LDADD    += ../gnulib/libgnu.la $(LTLIBINTL)
-restart_rename_LDADD    += $(GRVY_LIBS) $(HDF5_LDFLAGS)
+TESTS                   += esio_rename.sh
+EXTRA_DIST              += esio_rename.sh
 
 #############################################################################
 ## BASIC BASIC BASIC BASIC BASIC BASIC BASIC BASIC BASIC BASIC BASIC BASIC ##
