esio: fix apps/tests build order problem
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@16445 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,7 +4,7 @@ ACLOCAL_AMFLAGS = -I m4
 AUTOMAKE_OPTIONS = foreign
 
 # Build in these directories:
-SUBDIRS = gnulib esio examples tests apps doxygen
+SUBDIRS = gnulib esio examples apps tests doxygen
 
 # Distribute these items:
 DIST_SUBDIRS = gnulib esio examples tests apps doxygen
