esio: fix missing mpi_argp.h from apps/Makefile.am
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@16466 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/apps/Makefile.am
+++ b/apps/Makefile.am
@@ -8,6 +8,7 @@ AM_FCFLAGS     += -I$(top_builddir)        -I$(top_srcdir)
 AM_FCFLAGS     += -I$(top_builddir)/esio
 AM_LDFLAGS      = # Append below
 noinst_PROGRAMS = # Append below
+noinst_HEADERS  = mpi_argp.h
 bin_PROGRAMS    = # Append below
 BUILT_DOCS      = # Append below
 BUILT_SOURCES   = # Append below
