esio: fix #1257 infinite loop on HDF5 teardown
Involved somehow with GRVY being linked.  Weird.

git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@16517 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -33,10 +33,6 @@ AM_CFLAGS   += $(HDF5_CFLAGS)
 AM_CPPFLAGS += $(HDF5_CPPFLAGS)
 AM_FCFLAGS  += $(HDF5_FFLAGS)
 
-## Pick up GRVY library includes
-AM_CFLAGS  += $(GRVY_CFLAGS)
-AM_FCFLAGS += $(GRVY_FCFLAGS)
-
 #############################################################################
 ## INTERNAL INTERNAL INTERNAL INTERNAL INTERNAL INTERNAL INTERNAL INTERNAL ##
 #############################################################################
@@ -45,7 +41,7 @@ AM_FCFLAGS += $(GRVY_FCFLAGS)
 TESTS                   += restart_helpers
 check_PROGRAMS          += restart_helpers
 restart_helpers_SOURCES  = restart_helpers.c ../esio/restart-rename.c
-restart_helpers_LDADD    = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
+restart_helpers_LDADD    = ../esio/libesio.la $(HDF5_LDFLAGS)
 
 #############################################################################
 ## BASIC BASIC BASIC BASIC BASIC BASIC BASIC BASIC BASIC BASIC BASIC BASIC ##
@@ -56,13 +52,13 @@ TESTS          += basic.sh     # NB Wrapper script
 EXTRA_DIST     += basic.sh     # NB Wrapper script
 check_PROGRAMS += basic
 basic_SOURCES   = basic.c testutils.c
-basic_LDADD     = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
+basic_LDADD     = ../esio/libesio.la $(HDF5_LDFLAGS)
 
 ## Basic Fortran API sanity checks
 TESTS           += basic_f
 check_PROGRAMS  += basic_f
 basic_f_SOURCES  = basic_f.f90 testutils.c testframework.f90
-basic_f_LDADD    = ../esio/libesiof.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
+basic_f_LDADD    = ../esio/libesiof.la $(HDF5_LDFLAGS)
 
 ###########################################################################
 ## STRING STRING STRING STRING STRING STRING STRING STRING STRING STRING ##
@@ -75,12 +71,12 @@ EXTRA_DIST     += string.sh    # NB Wrapper script
 ## ...in C
 check_PROGRAMS += string
 string_SOURCES  = string.c testutils.c
-string_LDADD    = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
+string_LDADD    = ../esio/libesio.la $(HDF5_LDFLAGS)
 
 ## ...in Fortran
 check_PROGRAMS   += string_f
 string_f_SOURCES  = string_f.f90 testutils.c testframework.f90
-string_f_LDADD    = ../esio/libesiof.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
+string_f_LDADD    = ../esio/libesiof.la $(HDF5_LDFLAGS)
 
 ###########################################################################
 ## ATTRIBUTE ATTRIBUTE ATTRIBUTE ATTRIBUTE ATTRIBUTE ATTRIBUTE ATTRIBUTE ##
@@ -91,14 +87,14 @@ TESTS                    += attribute_double.sh    # NB Wrapper script
 EXTRA_DIST               += attribute_double.sh    # NB Wrapper script
 check_PROGRAMS           += attribute_double
 attribute_double_SOURCES  = attribute_double.c testutils.c
-attribute_double_LDADD    = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
+attribute_double_LDADD    = ../esio/libesio.la $(HDF5_LDFLAGS)
 
 ## Attribute single precision tests in C
 TESTS                   += attribute_float.sh     # NB Wrapper script
 EXTRA_DIST              += attribute_float.sh     # NB Wrapper script
 check_PROGRAMS          += attribute_float
 attribute_float_SOURCES  = attribute_float.c testutils.c
-attribute_float_LDADD    = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
+attribute_float_LDADD    = ../esio/libesio.la $(HDF5_LDFLAGS)
 
 ## Attribute integer tests...
 TESTS                 += attribute_int.sh         # NB Wrapper script
@@ -107,12 +103,12 @@ EXTRA_DIST            += attribute_int.sh         # NB Wrapper script
 ## ...in C
 check_PROGRAMS        += attribute_int
 attribute_int_SOURCES  = attribute_int.c testutils.c
-attribute_int_LDADD    = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
+attribute_int_LDADD    = ../esio/libesio.la $(HDF5_LDFLAGS)
 
 ## ...in Fortran
 check_PROGRAMS          += attribute_int_f
 attribute_int_f_SOURCES  = attribute_int_f.f90 testutils.c testframework.f90
-attribute_int_f_LDADD    = ../esio/libesiof.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
+attribute_int_f_LDADD    = ../esio/libesiof.la $(HDF5_LDFLAGS)
 
 ###########################################################################
 ## LINE LINE LINE LINE LINE LINE LINE LINE LINE LINE LINE LINE LINE LINE ##
@@ -123,14 +119,14 @@ TESTS               += line_double.sh    # NB Wrapper script
 EXTRA_DIST          += line_double.sh    # NB Wrapper script
 check_PROGRAMS      += line_double
 line_double_SOURCES  = line_double.c testutils.c
-line_double_LDADD    = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
+line_double_LDADD    = ../esio/libesio.la $(HDF5_LDFLAGS)
 
 ## Line single precision tests in C
 TESTS               += line_float.sh     # NB Wrapper script
 EXTRA_DIST          += line_float.sh     # NB Wrapper script
 check_PROGRAMS      += line_float
 line_float_SOURCES   = line_float.c testutils.c
-line_float_LDADD     = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
+line_float_LDADD     = ../esio/libesio.la $(HDF5_LDFLAGS)
 
 ## Line integer tests...
 TESTS             += line_int.sh         # NB Wrapper script
@@ -139,12 +135,12 @@ EXTRA_DIST        += line_int.sh         # NB Wrapper script
 ## ...in C
 check_PROGRAMS    += line_int
 line_int_SOURCES   = line_int.c testutils.c
-line_int_LDADD     = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
+line_int_LDADD     = ../esio/libesio.la $(HDF5_LDFLAGS)
 
 ## ...in Fortran
 check_PROGRAMS     += line_int_f
 line_int_f_SOURCES  = line_int_f.f90 testutils.c testframework.f90
-line_int_f_LDADD    = ../esio/libesiof.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
+line_int_f_LDADD    = ../esio/libesiof.la $(HDF5_LDFLAGS)
 
 #############################################################################
 ## PLANE PLANE PLANE PLANE PLANE PLANE PLANE PLANE PLANE PLANE PLANE PLANE ##
@@ -155,14 +151,14 @@ TESTS                += plane_double.sh    # NB Wrapper script
 EXTRA_DIST           += plane_double.sh    # NB Wrapper script
 check_PROGRAMS       += plane_double
 plane_double_SOURCES  = plane_double.c testutils.c
-plane_double_LDADD    = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
+plane_double_LDADD    = ../esio/libesio.la $(HDF5_LDFLAGS)
 
 ## Plane single precision tests in C
 TESTS                += plane_float.sh     # NB Wrapper script
 EXTRA_DIST           += plane_float.sh     # NB Wrapper script
 check_PROGRAMS       += plane_float
 plane_float_SOURCES   = plane_float.c testutils.c
-plane_float_LDADD     = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
+plane_float_LDADD     = ../esio/libesio.la $(HDF5_LDFLAGS)
 
 ## Plane integer tests...
 TESTS              += plane_int.sh         # NB Wrapper script
@@ -171,12 +167,12 @@ EXTRA_DIST         += plane_int.sh         # NB Wrapper script
 ## ...in C
 check_PROGRAMS     += plane_int
 plane_int_SOURCES   = plane_int.c testutils.c
-plane_int_LDADD     = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
+plane_int_LDADD     = ../esio/libesio.la $(HDF5_LDFLAGS)
 
 ## ...in Fortran
 check_PROGRAMS      += plane_int_f
 plane_int_f_SOURCES  = plane_int_f.f90 testutils.c testframework.f90
-plane_int_f_LDADD    = ../esio/libesiof.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
+plane_int_f_LDADD    = ../esio/libesiof.la $(HDF5_LDFLAGS)
 
 #############################################################################
 ## LAYOUT 0 LAYOUT 0 LAYOUT 0 LAYOUT 0 LAYOUT 0 LAYOUT 0 LAYOUT 0 LAYOUT 0 ##
@@ -187,14 +183,14 @@ TESTS                  += layout0_double.sh    # NB Wrapper script
 EXTRA_DIST             += layout0_double.sh    # NB Wrapper script
 check_PROGRAMS         += layout0_double
 layout0_double_SOURCES  = layout0_double.c testutils.c
-layout0_double_LDADD    = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
+layout0_double_LDADD    = ../esio/libesio.la $(HDF5_LDFLAGS)
 
 ## Layout 0 single precision tests in C
 TESTS                  += layout0_float.sh     # NB Wrapper script
 EXTRA_DIST             += layout0_float.sh     # NB Wrapper script
 check_PROGRAMS         += layout0_float
 layout0_float_SOURCES   = layout0_float.c testutils.c
-layout0_float_LDADD     = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
+layout0_float_LDADD     = ../esio/libesio.la $(HDF5_LDFLAGS)
 
 ## Layout 0 integer tests...
 TESTS                += layout0_int.sh         # NB Wrapper script
@@ -203,12 +199,12 @@ EXTRA_DIST           += layout0_int.sh         # NB Wrapper script
 ## ...in C
 check_PROGRAMS       += layout0_int
 layout0_int_SOURCES   = layout0_int.c testutils.c
-layout0_int_LDADD     = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
+layout0_int_LDADD     = ../esio/libesio.la $(HDF5_LDFLAGS)
 
 ## ...in Fortran
 check_PROGRAMS        += layout0_int_f
 layout0_int_f_SOURCES  = layout0_int_f.f90 testutils.c testframework.f90
-layout0_int_f_LDADD    = ../esio/libesiof.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
+layout0_int_f_LDADD    = ../esio/libesiof.la $(HDF5_LDFLAGS)
 
 #############################################################################
 ## LAYOUT 1 LAYOUT 1 LAYOUT 1 LAYOUT 1 LAYOUT 1 LAYOUT 1 LAYOUT 1 LAYOUT 1 ##
@@ -219,21 +215,21 @@ TESTS                  += layout1_double.sh    # NB Wrapper script
 EXTRA_DIST             += layout1_double.sh    # NB Wrapper script
 check_PROGRAMS         += layout1_double
 layout1_double_SOURCES  = layout1_double.c testutils.c
-layout1_double_LDADD    = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
+layout1_double_LDADD    = ../esio/libesio.la $(HDF5_LDFLAGS)
 
 ## Layout 1 single precision tests in C
 TESTS                  += layout1_float.sh     # NB Wrapper script
 EXTRA_DIST             += layout1_float.sh     # NB Wrapper script
 check_PROGRAMS         += layout1_float
 layout1_float_SOURCES   = layout1_float.c testutils.c
-layout1_float_LDADD     = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
+layout1_float_LDADD     = ../esio/libesio.la $(HDF5_LDFLAGS)
 
 ## Layout 1 integer tests in C
 TESTS                += layout1_int.sh         # NB Wrapper script
 EXTRA_DIST           += layout1_int.sh         # NB Wrapper script
 check_PROGRAMS       += layout1_int
 layout1_int_SOURCES   = layout1_int.c testutils.c
-layout1_int_LDADD     = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
+layout1_int_LDADD     = ../esio/libesio.la $(HDF5_LDFLAGS)
 
 #############################################################################
 ## LAYOUT 2 LAYOUT 2 LAYOUT 2 LAYOUT 2 LAYOUT 2 LAYOUT 2 LAYOUT 2 LAYOUT 2 ##
@@ -244,21 +240,21 @@ TESTS                  += layout2_double.sh    # NB Wrapper script
 EXTRA_DIST             += layout2_double.sh    # NB Wrapper script
 check_PROGRAMS         += layout2_double
 layout2_double_SOURCES  = layout2_double.c testutils.c
-layout2_double_LDADD    = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
+layout2_double_LDADD    = ../esio/libesio.la $(HDF5_LDFLAGS)
 
 ## Layout 2 single precision tests in C
 TESTS                  += layout2_float.sh     # NB Wrapper script
 EXTRA_DIST             += layout2_float.sh     # NB Wrapper script
 check_PROGRAMS         += layout2_float
 layout2_float_SOURCES   = layout2_float.c testutils.c
-layout2_float_LDADD     = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
+layout2_float_LDADD     = ../esio/libesio.la $(HDF5_LDFLAGS)
 
 ## Layout 2 integer tests in C
 TESTS                += layout2_int.sh         # NB Wrapper script
 EXTRA_DIST           += layout2_int.sh         # NB Wrapper script
 check_PROGRAMS       += layout2_int
 layout2_int_SOURCES   = layout2_int.c testutils.c
-layout2_int_LDADD     = ../esio/libesio.la $(GRVY_LIBS) $(HDF5_LDFLAGS)
+layout2_int_LDADD     = ../esio/libesio.la $(HDF5_LDFLAGS)
 
 #############################################################################
 ### INSTALLED APPLICATIONS INSTALLED APPLICATIONS INSTALLED APPLICATIONS  ###
