esio: update ESIO_TEST_OUTPUT_DIR to use builddir
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@16529 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -22,7 +22,7 @@ EXTRA_DIST      = layout_template.c      \
 
 TESTS              = # Append below
 TESTS_ENVIRONMENT  = ESIO_TEST_INPUT_DIR=$(srcdir)
-TESTS_ENVIRONMENT += ESIO_TEST_OUTPUT_DIR=.
+TESTS_ENVIRONMENT += ESIO_TEST_OUTPUT_DIR=$(builddir)
 
 # Use MPI compiler wrappers since HDF5 wrappers break autodependencies.
 CC=@MPICC@
