esio: #1261 fixes a distclean hiccup
Entered from recent AX_CONFIG_PREFIX_H work.

git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@16539 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/Makefile.am
+++ b/Makefile.am
@@ -28,8 +28,8 @@ pkgconfigdir   = $(libdir)/pkgconfig
 pkgconfig_DATA = esio.pc esio-hdf5.pc
 
 # Files to be deleted by make clean variants
-MOSTLYCLEANFILES = $(DX_CLEANFILES)
-DISTCLEANFILES = aminclude.am
+MOSTLYCLEANFILES =  $(DX_CLEANFILES)
+DISTCLEANFILES = aminclude.am _configs.sed esio/esio-config.h
 MAINTAINERCLEANFILES =     \
     aclocal.m4             \
     autom4te.cache/*       \
