esio: remove gnulib from FCFLAGS
Zero point to having Fortran look in gnulib-related directories.
Remove it to avoid problems down the line.

git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@16554 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -3,8 +3,7 @@
 AM_CFLAGS       =
 AM_CPPFLAGS     = -I$(top_builddir)/gnulib -I$(top_srcdir)/gnulib
 AM_CPPFLAGS    += -I$(top_builddir)        -I$(top_srcdir)
-AM_FCFLAGS      = -I$(top_builddir)/gnulib -I$(top_srcdir)/gnulib
-AM_FCFLAGS     += -I$(top_builddir)        -I$(top_srcdir)
+AM_FCFLAGS      = -I$(top_builddir)        -I$(top_srcdir)
 AM_FCFLAGS     += -I$(top_builddir)/esio
 AM_LDFLAGS      = # Append below
 check_PROGRAMS  = # Append below
