--- a/esio/Makefile.am
+++ b/esio/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-AM_CFLAGS          =
+AM_CFLAGS          = -DESIO_SHARED_EXPORTS     # Build public APIs
 AM_CPPFLAGS        = -I$(top_builddir)/gnulib -I$(top_srcdir)/gnulib
 AM_CPPFLAGS       += -I$(top_builddir)        -I$(top_srcdir)
 AM_FCFLAGS         = -I$(top_builddir)        -I$(top_srcdir)
@@ -18,15 +18,8 @@ EXTRA_DIST         = # Append below
 CC=@MPICC@
 FC=@MPIFC@
 
-## Pick up HDF5 library includes
-AM_CFLAGS   += $(HDF5_CFLAGS)
-AM_CPPFLAGS += $(HDF5_CPPFLAGS)
-AM_FCFLAGS  += $(HDF5_FFLAGS)
-
-# Public C library
+# Public ESIO C library
 lib_LTLIBRARIES     += libesio.la
-libesio_la_CFLAGS    = -DESIO_SHARED_EXPORTS
-libesio_la_LDFLAGS   = -release $(PACKAGE_VERSION)
 libesio_la_SOURCES   = chunksize.c
 libesio_la_SOURCES  += error.c
 libesio_la_SOURCES  += esio.c
@@ -35,6 +28,9 @@ libesio_la_SOURCES  += h5utils.c
 libesio_la_SOURCES  += layout.c
 libesio_la_SOURCES  += metadata.c
 libesio_la_SOURCES  += restart-rename.c
+libesio_la_CFLAGS    = $(AM_CFLAGS)   $(HDF5_CFLAGS)
+libesio_la_CPPFLAGS  = $(AM_CPPFLAGS) $(HDF5_CPPFLAGS)
+libesio_la_LDFLAGS   = -release $(PACKAGE_VERSION)
 libesio_la_LDFLAGS  += $(LTLIBINTL) # gnulib requirement
 libesio_la_LIBADD    = ../gnulib/libgnu.la
 
@@ -46,8 +42,8 @@ esio_includedir       = $(includedir)/esio
 esio_include_HEADERS  = error.h
 esio_include_HEADERS += esio.h
 esio_include_HEADERS += version.h
-esio_include_HEADERS += esio-config.h
 esio_include_HEADERS += visibility.h
+esio_include_HEADERS += esio-config.h
 
 # Headers internal to the library
 noinst_HEADERS += chunksize.h
@@ -69,6 +65,7 @@ EXTRA_DIST += line.f90
 EXTRA_DIST += plane.f90
 
 # Public Fortran library is a superset of libesio.la
+# HDF5 Fortran API never used because we purely wrap ESIO's C API
 lib_LTLIBRARIES          += libesiof.la
 libesiof_la_LIBTOOLFLAGS  = --tag=FC
 libesiof_la_SOURCES       = esio_c_binding.f90
