esio: fix distcheck target for Intel
Since configure drops t__genmod and foo__genmod under Intel's compiler.

git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@16571 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/Makefile.am
+++ b/Makefile.am
@@ -29,7 +29,12 @@ pkgconfig_DATA = esio.pc esio-hdf5.pc
 
 # Files to be deleted by make clean variants
 MOSTLYCLEANFILES =  $(DX_CLEANFILES)
-DISTCLEANFILES = aminclude.am _configs.sed esio/esio-config.h
+DISTCLEANFILES =           \
+    aminclude.am           \
+    _configs.sed           \
+    esio/esio-config.h     \
+    *__genmod.f90          \
+    *__genmod.mod
 MAINTAINERCLEANFILES =     \
     aclocal.m4             \
     autom4te.cache/*       \
