--- a/esio/Makefile.am
+++ b/esio/Makefile.am
@@ -82,8 +82,7 @@ moduledir      = @libdir@
 module_DATA    = esio.mod
 
 # Extra things to clean up
-clean-local:
-	rm -f *.mod *.gcno *.gcna
+CLEANFILES     += *.mod *.gcno *.gcna
 
 # License updates
 include $(top_srcdir)/license.am
