esio: fail configure when no HDF5 #1262
git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@16574 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/configure.ac
+++ b/configure.ac
@@ -49,6 +49,9 @@ MPICC_LOCATION=$(eval command -v $MPICC)
 AC_SUBST([MPICC_LOCATION])
 AX_MPIP()
 AX_LIB_HDF5([parallel])
+if test "x$with_hdf5" != "xyes"; then
+    AC_MSG_ERROR([Parallel HDF5 installation not detected.])
+fi
 AX_VISIBILITY([hidden])
 AX_TLS()
 AX_COMPILER_VENDOR()
