--- a/Makefile.am
+++ b/Makefile.am
@@ -14,9 +14,11 @@ EXTRA_DIST  += build-aux/sfmakedepend.pl
 EXTRA_DIST  += build-aux/update_license.pl
 EXTRA_DIST  += m4/gnulib-cache.m4
 
-# Eliminate .svn directories in dist tarball
-dist-hook:
+dist-hook: docs
+	: # Eliminate .svn directories in dist tarball
 	find $(distdir)/ -name '.svn' -type d -exec rm {} \;
+	: # Include generated documentation in the dist tarball
+	cp -rv $(top_builddir)/docs $(top_distdir)
 
 # Tools in the auxillary directory
 AUX_DIST  = build-aux/install-sh
