--- a/configure.ac
+++ b/configure.ac
@@ -122,7 +122,7 @@ DX_DOXYGEN_FEATURE([ON])
 DX_HTML_FEATURE([ON])
 DX_CHM_FEATURE([OFF])
 DX_CHI_FEATURE([OFF])
-DX_MAN_FEATURE([OFF])
+DX_MAN_FEATURE([ON])
 DX_RTF_FEATURE([OFF])
 DX_XML_FEATURE([OFF])
 DX_PDF_FEATURE([OFF])
