esio: scheme_prefix_len utility implementation #1328
Necessary step for getting #1328 up and going.

git-svn-id: https://svn.ices.utexas.edu/repos/pecos/esio/trunk@17063 0bd85f0b-c151-43b9-a1e9-27231104551f

--- a/esio/Makefile.am
+++ b/esio/Makefile.am
@@ -36,6 +36,7 @@ libesio_la_SOURCES  += h5utils.c
 libesio_la_SOURCES  += layout.c
 libesio_la_SOURCES  += metadata.c
 libesio_la_SOURCES  += restart-rename.c
+libesio_la_SOURCES  += uri.c
 libesio_la_LDFLAGS   = -release $(PACKAGE_VERSION)
 libesio_la_LDFLAGS  += $(LTLIBINTL) # gnulib requirement
 libesio_la_LIBADD    = ../gnulib/libgnu.la
@@ -54,20 +55,21 @@ esio_include_HEADERS += esio-config.h
 # Headers internal to the library
 noinst_HEADERS += chunksize.h
 noinst_HEADERS += file-copy.h
-noinst_HEADERS += restart-rename.h
 noinst_HEADERS += h5utils.h
 noinst_HEADERS += layout.h
 noinst_HEADERS += metadata.h
+noinst_HEADERS += restart-rename.h
+noinst_HEADERS += uri.h
 
 # Templated implementation files necessary for building the library
+EXTRA_DIST += attribute.f90
+EXTRA_DIST += field.f90
 EXTRA_DIST += layout0.c
 EXTRA_DIST += layout1.c
 EXTRA_DIST += layout2.c
 EXTRA_DIST += line.c
-EXTRA_DIST += plane.c
-EXTRA_DIST += attribute.f90
-EXTRA_DIST += field.f90
 EXTRA_DIST += line.f90
+EXTRA_DIST += plane.c
 EXTRA_DIST += plane.f90
 
 # Public Fortran library is a superset of libesio.la
